--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,10 +21,10 @@ spring.resources.add-mappings=true
 
 server.servlet.context-path=/cloud
 
-cloud.aws.credentials.secret-key=${aws_secret_access_key}
-cloud.aws.credentials.access-key=${aws_access_key_id}
-cloud.aws.region.static=${aws_region}
-cloud.aws.region.bucket.name=${aws_bucket_name} 
+cloud.aws.credentials.secret-key=${{secrets.AWS_SECRET_KEY}}
+cloud.aws.credentials.access-key=${{secrets.AWS_ACCESS_KEY}}
+cloud.aws.region.static=${{secrets.AWS_REGION}}
+cloud.aws.region.bucket.name=${{secrets.AWS_BUCKET_NAME}} 
 
 cloud.aws.stack.auto = false
 cloud.aws.region.use-default-aws-region-chain=true
