--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,10 +21,10 @@ spring.resources.add-mappings=true
 
 server.servlet.context-path=/cloud
 
-cloud.aws.credentials.secret-key=${secrets.AWS_SECRET_KEY}
-cloud.aws.credentials.access-key=${secrets.AWS_ACCESS_KEY}
-cloud.aws.region.static=${secrets.AWS_REGION}
-cloud.aws.region.bucket.name=${secrets.AWS_BUCKET_NAME}
+cloud.aws.credentials.secret-key=3WuR0Zshd29kM7fc5JEpL7KQX7SooXVlF7OySMvV
+cloud.aws.credentials.access-key=AKIARSRCF6UBSLKMORCF
+cloud.aws.region.static=us-west-2
+cloud.aws.region.bucket.name=codedeploy.w23jhhkkh12dsik2
 
 cloud.aws.stack.auto = false
 cloud.aws.region.use-default-aws-region-chain=true
