--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -41,3 +41,9 @@ jobs:
           cd .. 
           pwd
           ls
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credential@v1
+        with: 
+          aws-access-key-id: ${{secrets.AWS_ACCESS_KEY}}
+          aws-secret-access-key: ${{secrets.AWS_SECRET_KEY}}
+          aws-region: ${{secrets.AWS_REGION}}
