--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,9 +6,9 @@ server.port=8080
 
 #
 
-spring.datasource.jdbc-url=jdbc:mysql://database-1.cw7rdiczgpma.us-west-2.rds.amazonaws.com:3306?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
-spring.datasource.username=admin
-spring.datasource.password=csye6225
+spring.datasource.jdbc-url=jdbc:mysql://localhost:3306/userDB?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=
 
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.show-sql=false
