--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,14 @@
 server.port=8080
 
-#spring.datasource.jdbc-url=jdbc:mysql://${DB_HOSTNAME}:${DB_PORT}/${DB_DATABASE}?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
-#spring.datasource.username=${DB_USER}
-#spring.datasource.password=${DB_PASS}
+spring.datasource.jdbc-url=jdbc:mysql://${DB_HOSTNAME}:${DB_PORT}/${DB_DATABASE}?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASS}
 
 #
 
-spring.datasource.jdbc-url=jdbc:mysql://localhost:3306/userDB?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=
+# spring.datasource.jdbc-url=jdbc:mysql://localhost:3306/userDB?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+# spring.datasource.username=root
+# spring.datasource.password=
 
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.show-sql=false
@@ -21,8 +21,8 @@ spring.resources.add-mappings=true
 
 server.servlet.context-path=/cloud
 
-cloud.aws.credentials.secret-key=3WuR0Zshd29kM7fc5JEpL7KQX7SooXVlF7OySMvV
-cloud.aws.credentials.access-key=AKIARSRCF6UBSLKMORCF
+cloud.aws.credentials.secret-key=${aws_secret_access_key}
+cloud.aws.credentials.access-key=${aws_access_key_id}
 cloud.aws.region.static=us-west-2
 cloud.aws.region.bucket.name=codedeploy.w23jhhkkh12dsik2
 
