--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -11,7 +11,7 @@ env:
   DB_PORT: 3306
   DB_DATABASE: userDB
   DB_USER: root
-  DB_PASS: "ß"
+  DB_PASS: ''
   aws_secret_access_key: 3WuR0Zshd29kM7fc5JEpL7KQX7SooXVlF7OySMvV
   aws_access_key_id: AKIARSRCF6UBSLKMORCF
   aws_bucket_name: qqazc.dev.domain.tld20211031013007559900000001
@@ -46,7 +46,7 @@ jobs:
           echo "******************************************************************************************"
           cat /etc/environment
           echo "******************************************************************************************"
-          mvn clean install
+          # mvn clean install
           # pwd
           # ls
           # mvn clean
