--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -46,7 +46,7 @@ jobs:
           echo "******************************************************************************************"
           cat /etc/environment
           echo "******************************************************************************************"
-          # mvn clean install
+          mvn clean install
           # pwd
           # ls
           # mvn clean
