--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port=8080
 
 spring.datasource.jdbc-url=jdbc:mysql://${DB_HOSTNAME}:${DB_PORT}/${DB_DATABASE}?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=${DB_USER}
-spring.datasource.password=${DB_PASS}
+spring.datasource.password=${DB_PASSWORD}
 
 #
 
