--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -33,8 +33,8 @@ jobs:
         run: |
           echo "************************************MySQL Setup******************************************************"
           sudo /etc/init.d/mysql start
-          mysql -e 'CREATE DATABASE ${{ env.DB_DATABASE }};' -u${{ env.DB_USER }} -p${{ env.DB_PASSWORD }}
-          mysql -e 'SHOW DATABASES;' -uroot -proot
+          sudo mysql -e 'CREATE DATABASE ${{ env.DB_DATABASE }};' -u${{ env.DB_USER }} -p${{ env.DB_PASSWORD }}
+          sudo mysql -e 'SHOW DATABASES;' -uroot -proot
           echo "************************************MySQL Setup******************************************************"
       - name: Build with maven
         run: |
