--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -55,7 +55,7 @@ jobs:
           echo "******************************************************************************************"
           echo "********************************************Installin**********************************************"
           # sudo apt install mysql-server
-          # mvn clean install
+          mvn clean install
           # pwd
           # ls
           # mvn clean
