--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -31,45 +31,31 @@ jobs:
           java-version: 1.8
       - name: Set up MySQL
         run: |
-          echo "************************************MySQL Setup******************************************************"
           sudo /etc/init.d/mysql start
           sudo mysql -e 'CREATE DATABASE ${{ env.DB_DATABASE }};' -u${{ env.DB_USER }} -p${{ env.DB_PASSWORD }}
           sudo mysql -e 'SHOW DATABASES;' -uroot -proot
-          echo "************************************MySQL Setup******************************************************"
       - name: Build with maven
         run: |
-          # sudo su
-          # echo "${{env.ARTIFACT_NAME}}"
-          # echo export DB_HOSTNAME=csye6225.c02nl79rv62h.us-west-2.rds.amazonaws.com >> ~/etc/environment
-          # echo export DB_PORT=3306 >> /etc/environment
-          # echo export DB_DATABASE=csye6225 >> /etc/environment
-          # echo export DB_USER=csye6225 >> /etc/environment
-          # echo export DB_PASS=csye6225 >> /etc/environment
-          # echo export aws_access_key_id=AKIARSRCF6UBSLKMORCF >> /etc/environment
-          # echo export aws_secret_access_key=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 >> /etc/environment
-          # echo export aws_region=us-west-2 >> /etc/environment
-          # echo export aws_bucket_name=q3mv7.prod.domain.tld20211031180936427300000001 >> /etc/environment
-          # source /etc/environment
-          echo "******************************************************************************************"
+          echo "***************************************Printitng environment variables***************************************************"
           cat /etc/environment
           echo "******************************************************************************************"
-          echo "********************************************Installin**********************************************"
-          # sudo apt install mysql-server
+          echo "********************************************Starting mvn clean install**********************************************"
           mvn clean install
-          # pwd
-          # ls
-          # mvn clean
-          # mvn clean install
+          pwd
+          echo "********************************************Build with maven List ls**********************************************"
+          ls
           # pwd
           # ls
       - name: Build Deployemnt Artifact
         run: |
           mkdir codedeploy_artifact
           zip -r ${{env.ARTIFACT_NAME}} codedeploy_artifact/
+          echo "********************************************Build Deployemnt Artifact List ls**********************************************"
           ls
           pwd
           cd codedeploy_artifact
           pwd
+          echo "********************************************codedeploy_artifact List ls**********************************************"
           ls
           cd .. 
           pwd
