--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -10,7 +10,7 @@ env:
   DB_HOSTNAME: localhost
   DB_PORT: 3306
   DB_DATABASE: csye6225
-  DB_USER: csye6225
+  DB_USER: root
   DB_PASSWORD: 'csye6225'
   # aws_secret_access_key: 3WuR0Zshd29kM7fc5JEpL7KQX7SooXVlF7OySMvV
   # aws_access_key_id: AKIARSRCF6UBSLKMORCF
