--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -6,18 +6,15 @@ env:
   ARTIFACT_NAME: csye6225-webapp-${{github.run_number}}.zip
   CODEDEPLOY_APPLICATION_NAME: mywebapp
   CODEDEPLOY_APPLICATION_DEPLOYMENT_GROUP_NAME: mywebapp
-  AWS_REGION: ${{secrets.AWS_REGION}}
+  AWS_REGION: us-west-2
   DB_HOSTNAME: localhost
   DB_PORT: 3306
-  DB_DATABASE: csye6225
+  DB_DATABASE: userDB
   DB_USER: root
-  DB_PASSWORD: 'csye6225'
-  # aws_secret_access_key: 3WuR0Zshd29kM7fc5JEpL7KQX7SooXVlF7OySMvV
-  # aws_access_key_id: AKIARSRCF6UBSLKMORCF
-  # aws_bucket_name: qqazc.dev.domain.tld20211031013007559900000001
-  aws_secret_access_key: ${{secrets.AWS_ACCESS_KEY}}
-  aws_access_key_id: ${{secrets.AWS_SECRET_KEY}}
-  aws_bucket_name: ${{secrets.AWS_BUCKET_NAME}}
+  DB_PASSWORD: 'root'
+  aws_secret_access_key: 3WuR0Zshd29kM7fc5JEpL7KQX7SooXVlF7OySMvV
+  aws_access_key_id: AKIARSRCF6UBSLKMORCF
+  aws_bucket_name: qqazc.dev.domain.tld20211031013007559900000001
 
 on:
   pull_request:
@@ -41,8 +38,11 @@ jobs:
         run: |
           echo "***************************************Printitng environment variables***************************************************"
           cat /etc/environment
+          echo "******************************************************************************************"
+          echo "********************************************Starting mvn clean install**********************************************"
           mvn clean install
           pwd
+          echo "********************************************Build with maven List ls**********************************************"
           ls
           # pwd
           # ls
@@ -50,10 +50,12 @@ jobs:
         run: |
           mkdir codedeploy_artifact
           zip -r ${{env.ARTIFACT_NAME}} codedeploy_artifact/
+          echo "********************************************Build Deployemnt Artifact List ls**********************************************"
           ls
           pwd
           cd codedeploy_artifact
           pwd
+          echo "********************************************codedeploy_artifact List ls**********************************************"
           ls
           cd .. 
           pwd
