--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -6,15 +6,15 @@ env:
   ARTIFACT_NAME: csye6225-webapp-${{github.run_number}}.zip
   CODEDEPLOY_APPLICATION_NAME: mywebapp
   CODEDEPLOY_APPLICATION_DEPLOYMENT_GROUP_NAME: mywebapp
-  AWS_REGION: us-west-2
+  AWS_REGION: ${{secrets.AWS_REGION}}
   DB_HOSTNAME: localhost
   DB_PORT: 3306
   DB_DATABASE: csye6225
   DB_USER: root
   DB_PASSWORD: 'root'
-  aws_secret_access_key: 3WuR0Zshd29kM7fc5JEpL7KQX7SooXVlF7OySMvV
-  aws_access_key_id: AKIARSRCF6UBSLKMORCF
-  aws_bucket_name: qqazc.dev.domain.tld20211031013007559900000001
+  aws_secret_access_key: ${{secrets.AWS_SECRET_KEY}}
+  aws_access_key_id: ${{secrets.AWS_ACCESS_KEY}}
+  aws_bucket_name: ${{secrets.AWS_BUCKET_NAME}}
 
 on:
   pull_request:
