--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -60,4 +60,5 @@ jobs:
           aws-region: ${{secrets.AWS_REGION}}
       - name: Copy Artifact to S3
         run: |
+          #echo 'Copying artifact to s3 bycket '
           aws s3 sync ./codedeploy_artifact s3://${{secrets.S3_CODEDEPLOY_BUCKET}}
