--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -47,7 +47,9 @@ jobs:
           ls
           pwd
           cd codedeploy_artifact
+          #echo 'Printing path'
           pwd
+          #echo 'Listing codedeploy_artifact folders'
           ls
           cd .. 
           pwd
