--- a/bin/resources/application.properties
+++ b/bin/resources/application.properties
@@ -1,16 +1,9 @@
 server.port=8080
 
-
-
-#
-
-# spring.datasource.jdbc-url=jdbc:mysql://localhost:3306/userDB?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
-# spring.datasource.username=root
-# spring.datasource.password=
-
 spring.datasource.jdbc-url=jdbc:mysql://${DB_HOSTNAME}:${DB_PORT}/${DB_DATABASE}?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=${DB_USER}
-spring.datasource.password=${DB_PASSWORD}
+spring.datasource.password=${DB_PASS}
+
 
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.show-sql=false
@@ -25,8 +18,8 @@ server.servlet.context-path=/cloud
 
 cloud.aws.credentials.secret-key=${aws_secret_access_key}
 cloud.aws.credentials.access-key=${aws_access_key_id}
-cloud.aws.region.static=us-west-2
-cloud.aws.region.bucket.name=codedeploy.w23jhhkkh12dsik2
+cloud.aws.region.static=${aws_region}
+cloud.aws.region.bucket.name=${aws_bucket_name} 
 
 cloud.aws.stack.auto = false
 cloud.aws.region.use-default-aws-region-chain=true
