--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -50,6 +50,7 @@ jobs:
           echo '*************Tree Strucutre Build Deployemnt Artifact After mkdir codedeploy_artifact*************'
           tree .
           zip -r ${{env.ARTIFACT_NAME}} codedeploy_artifact/
+          cp -rf ${{env.ARTIFACT_NAME}} codedeploy_artifact/
           echo '*************Tree Strucutre Build Deployemnt Artifact After zip -r ${{env.ARTIFACT_NAME}} codedeploy_artifact/*************'
           tree .
           pwd
