--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -4,6 +4,16 @@ on:
 
 name: Check
 
+env:
+  #Artifact Name: csye6225-webapp-${{github.run_number}}.zip
+  DB_HOSTNAME: localhost
+  DB_PORT: 3306
+  DB_DATABASE: csye6225
+  DB_USER: root
+  DB_PASSWORD: 'root'
+  aws_secret_access_key: ${{secrets.AWS_SECRET_KEY}}
+  aws_access_key_id: ${{secrets.AWS_ACCESS_KEY}}
+  aws_bucket_name: ${{secrets.AWS_BUCKET_NAME}}
 
 jobs:
   check:
@@ -12,6 +22,10 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v2
+    # - name: Setup JDK 1.8
+    #   uses: actions/setup-java@v1
+    #   with: 
+    #       java-version: 1.8
     - name: Run tests
       run: |
         mvn -Dtest=AmiWebapp1ApplicationTests test
