--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -47,7 +47,7 @@ jobs:
       - name: Build Deployemnt Artifact
         run: |
           mkdir codedeploy_artifact
-          echo '*************Tree Strucutre Build Deployemnt Artifact After mkdir codedeploy_artifact*************'
+          echo '*************Tree Strucutre Build Deployemnt Artifact After mkdir codedeploy_artifact** ***********'
           tree .
           zip -r ${{env.ARTIFACT_NAME}} codedeploy_artifact java src target
           cp -rf ${{env.ARTIFACT_NAME}} codedeploy_artifact/
@@ -79,3 +79,18 @@ jobs:
           tree .
           ls ./codedeploy_artifact
           aws s3 sync ./codedeploy_artifact s3://${{secrets.AWS_BUCKET_NAME}}
+      # - name: CodeDeploy API call
+      #   run: |
+      #     |
+      #       DEPLOYMENT_ID=`aws deploy create-deployment \
+      #         --application-name ${CODEDEPLOY_APPLICATION_NAME} \
+      #         --deployment-config-name CodeDeployDefault.AllAtOnce \
+      #         --deployment-group-name ${CODEDEPLOY_APPLICATION_DEPLOYMENT_GROUP_NAME} \
+      #         --description "CSYE6255 - CodeDeploy" \
+      #         --s3-location bucket=${S3_CODEDEPLOY_BUCKET},bundleType=zip,key=${{env.ARTIFACT_NAME}} \
+      #         --region us-west-2 \
+      #         --output text`
+      #       echo $DEPLOYMENT_ID
+      #       aws deploy wait deployment-successful --deployment-id $DEPLOYMENT_ID --region us-east-1
+      #       aws deploy get-deployment --deployment-id $DEPLOYMENT_ID --query 'deploymentInfo.status' --region us-west-2 --output json
+      
