--- a/resources/application.properties
+++ b/resources/application.properties
@@ -27,3 +27,19 @@ cloud.aws.region.auto=false
 cloud.aws.stack=false
 logging.level.com.amazonaws.util.EC2MetadataUtils=error
 logging.level.com.amazonaws.internal.InstanceMetadataServiceResourceFetcher=error
+
+
+
+
+management.server.port=9000
+
+management.endpoints.web.exposure.include=*
+management.endpoints.enabled-by-default=false
+management.endpoint.loggers.enabled=true
+management.endpoint.restart.enabled=true
+management.endpoint.refresh.enabled=true
+management.endpoint.health.enabled=true
+management.security.enabled=false
+management.health.db.enabled=true
+management.health.diskspace.enabled=true
+management.endpoints.web.base-path=/
