--- a/resources/application.properties
+++ b/resources/application.properties
@@ -16,6 +16,9 @@ spring.resources.add-mappings=true
 
 server.servlet.context-path=/cloud
 
+server.shutdown = graceful
+spring.lifecycle.timeout-per-shutdown-phase=50s
+
 cloud.aws.credentials.secret-key=${aws_secret_access_key}
 cloud.aws.credentials.access-key=${aws_access_key_id}
 cloud.aws.region.static=${aws_region}
@@ -27,19 +30,3 @@ cloud.aws.region.auto=false
 cloud.aws.stack=false
 logging.level.com.amazonaws.util.EC2MetadataUtils=error
 logging.level.com.amazonaws.internal.InstanceMetadataServiceResourceFetcher=error
-
-
-
-
-management.server.port=9000
-
-management.endpoints.web.exposure.include=*
-management.endpoints.enabled-by-default=false
-management.endpoint.loggers.enabled=true
-management.endpoint.restart.enabled=true
-management.endpoint.refresh.enabled=true
-management.endpoint.health.enabled=true
-management.security.enabled=false
-management.health.db.enabled=true
-management.health.diskspace.enabled=true
-management.endpoints.web.base-path=/
