--- a/bin/resources/application.properties
+++ b/bin/resources/application.properties
@@ -27,3 +27,6 @@ cloud.aws.region.auto=false
 cloud.aws.stack=false
 logging.level.com.amazonaws.util.EC2MetadataUtils=error
 logging.level.com.amazonaws.internal.InstanceMetadataServiceResourceFetcher=error
+
+server.shutdown=graceful
+spring.lifecycle.timeout-per-shutdown-phase=50s
